# mymlrecipes

./: .buildinfo  .gitignore  CONTRIBUTING.md  LICENSE  README.html  README.md  _config.yml  _toc.yml  anomaly-detection.json  basics-1.json  basics.json  bayesian-vs-frequentist-reasoning.json  business-scenarios.json  central-limit-theorem.json  classification.json  config.json  content.html  data-manipulation-1.json  data-manipulation.json  data.json  excel-basics.json  functions.json  generative-vs-discriminative-models.json  genindex.html  git.sh  hyperparameter-optimization.json  hypothesis-testing.json  index.html  index.json  industry-application.json  intro.html  intro.md  joins.json  lexical-processing.json  markdown.html  maximum-likelihood-estimate.json  missing-value.json  myst.search.json  myst.xref.json  myst.yml  (+27 more)
_sources/: README.md  intro.md
anomaly-detection/: index.html
basics/: index.html
basics-1/: index.html
bayesian-vs-frequentist-reasoning/: index.html
business-scenarios/: index.html
central-limit-theorem/: index.html
classification/: index.html
contents/: To Do List.html
data/: index.html
data-manipulation/: index.html
data-manipulation-1/: index.html
excel-basics/: index.html
functions/: index.html
generative-vs-discriminative-models/: index.html
hyperparameter-optimization/: index.html
hypothesis-testing/: index.html
industry-application/: index.html
joins/: index.html
lexical-processing/: index.html
maximum-likelihood-estimate/: index.html
missing-value/: index.html
my_ml_recipes/: _config.yml  _toc.yml
(+144 files in other folders)
